[gd_scene load_steps=7 format=3 uid="uid://cmlgvv42gb1nb"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_rnxav"]
[ext_resource type="PackedScene" uid="uid://5dek2ev06mqt" path="res://Scenes/ball.tscn" id="2_kpqit"]
[ext_resource type="PackedScene" uid="uid://cg7qwns07t0qy" path="res://Scenes/big_ball.tscn" id="3_cd7l6"]
[ext_resource type="PackedScene" uid="uid://rm7jhigqehnv" path="res://Scenes/very_big_ball.tscn" id="4_bhiup"]
[ext_resource type="Texture2D" uid="uid://cmfpl66ow6gc3" path="res://image/baie.png" id="5_4ii8f"]
[ext_resource type="PackedScene" uid="uid://dbrmf6g0etro5" path="res://Scenes/figue.tscn" id="5_ok2pc"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rnxav")
ball_scene = ExtResource("2_kpqit")
big_ball_scene = ExtResource("3_cd7l6")
very_big_ball_scene = ExtResource("4_bhiup")
figue_scene = ExtResource("5_ok2pc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 600.0
offset_bottom = 800.0
color = Color(0.996078, 0.85098, 0.631373, 1)

[node name="Prevision" type="ColorRect" parent="."]
offset_left = 128.0
offset_top = 224.0
offset_right = 132.0
offset_bottom = 778.0
color = Color(1, 1, 1, 0.501961)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 776.0
offset_right = 576.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = 264.0
offset_right = 24.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 576.0
offset_top = 264.0
offset_right = 600.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visibility_layer = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visibility_layer = 3
position = Vector2(24, 48)
polygon = PackedVector2Array(-24, 216, -24, 752, 576, 752, 576, 216, 552, 216, 552, 728, 0, 728, 0, 216)

[node name="Action" type="Timer" parent="."]

[node name="Show_sprite" type="Timer" parent="."]

[node name="Next_Fruit" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(560, 40)
scale = Vector2(0.616, 0.503)

[node name="Fruit" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(128, 224)
scale = Vector2(0.616, 0.503)
texture = ExtResource("5_4ii8f")

[connection signal="timeout" from="Action" to="." method="_on_action_timeout"]
[connection signal="timeout" from="Show_sprite" to="." method="_on_show_sprite_timeout"]
